Organização, imagens e início do sorteador

--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@
     </header>
 
     <main class="principal">
-        <!--<div class="ondeApareceAsImagens">
-            <img class="estrela"
-                src="https://www.pngjoy.com/pngm/132/2675596_steven-universe-star-steven-universe-su-logo-png.png"
-                alt="">
-        </div>-->
+        <div class="ondeApareceAsImagens">
+            <h3 data-trocaImg><img class="gifMeioDeTela" id="imagem"
+                    src="https://cdn2.scratch.mit.edu/get_image/user/20598002_60x60.png" alt="">
+            </h3>
+        </div>
 
 
-        <button class="btnSorteia" type="button">Sortear</button>
+        <button onclick="trocaImg()" class="btnSorteia" type="button" data-btnSorteia>Sortear</button>
+
     </main>
 
 
     <footer class="rodape">
         <a href="https://z-p42.www.instagram.com/vnanquanv/?hl=pt-br">
-            <img class="jakeGif"
-                src="css/img/tumblr_mtjqvtka4z1rfjowdo1_500.gif"
-                alt="Jake">
+            <img class="jakeGif" src="css/img/tumblr_mtjqvtka4z1rfjowdo1_500.gif" alt="Jake">
         </a>
     </footer>
 
